--- a/platform/msb430/Makefile
+++ b/platform/msb430/Makefile
@@ -1,6 +1,6 @@
 # $Id: Makefile,v 1.3 2007/08/17 13:10:16 nvt-se Exp $
 
-all: radio-jammer
+all: test-abc
 upload: test-abc test-abc.u
 
 test-abc:
