--- a/platform/z1/apps/cc2420-jammer/Makefile
+++ b/platform/z1/apps/cc2420-jammer/Makefile
@@ -1,9 +1,9 @@
-CONTIKI = ../../..
+CONTIKI = ../../../..
 ifndef TARGET
 TARGET=z1
 endif
 
-CFLAGS = -DWITH_NULLMAC=1 -DENABLE_CCA_INTERRUPT=1 -DENABLE_FIFO_INTERRUPT=0 -DENABLE_UNBUFFERED_MODE=0 -DENABLE_FAST_TX=0
+CFLAGS = -DWITH_NULLMAC=1 -DENABLE_CCA_INTERRUPT=0 -DENABLE_FIFO_INTERRUPT=0 -DENABLE_UNBUFFERED_MODE=0 -DENABLE_FAST_TX=0
 
 all: cc2420-jammer
 
