restrict packet seqno to range [0, 99], which can be converted into a 3-byte string buffer with an ending '\'

--- a/platform/z1/apps/cc2420-jammer/Makefile
+++ b/platform/z1/apps/cc2420-jammer/Makefile
@@ -3,7 +3,7 @@ ifndef TARGET
 TARGET=z1
 endif
 
-CFLAGS = -DWITH_NULLMAC=1 -DENABLE_CCA_INTERRUPT=0 -DENABLE_FIFO_INTERRUPT=0 -DENABLE_UNBUFFERED_MODE=0 -DENABLE_FAST_TX=0
+CFLAGS = -DENABLE_CCA_INTERRUPT=0 -DENABLE_FIFO_INTERRUPT=0 -DENABLE_UNBUFFERED_MODE=0 -DENABLE_FAST_TX=0
 
 all: cc2420-jammer
 
