--- a/platform/wismote/Makefile.wismote
+++ b/platform/wismote/Makefile.wismote
@@ -31,24 +31,61 @@ endif
 CONTIKI_TARGET_SOURCEFILES += $(ARCH) $(UIPDRIVERS)
 
 MCU=msp430f5437
+
+ifndef WITH_JTAG
+# Flag set to avoid writing on the bootloader flash space
+LDFLAGS += -Wl,-Ttext=0x8000
+CFLAGS += -Wl,-Ttext=0x8000
+endif
+
 include $(CONTIKI)/cpu/msp430/Makefile.msp430
 
 ifdef IAR
-LDFLAGSNO += -xm "$(IAR_PATH)/lib/dlib/dl430xsfn.r43" -f "$(IAR_PATH)/config/lnk430f5437.xcl"
-LDFLAGS += $(LDFLAGSNO) -Felf -yn
-endif
+
+ LDFLAGSNO += -xm "$(IAR_PATH)/lib/dlib/dl430xsfn.r43" -f "$(IAR_PATH)/config/lnk430f5437.xcl"
+ LDFLAGS += $(LDFLAGSNO) -Felf -yn
+
+else # IAR
+
+ ifndef MSPGCC_VERSION
+  MSPGCC_VERSION := ${shell $(CC) -dumpversion}
+ endif
+
+ ifneq (,$(findstring 4.7.,$(MSPGCC_VERSION)))
+  # 20 bits flags for compilation (supported from mspgcc 4.7.0)
+  CFLAGS += -mmemory-model=large -mcode-region=far -mdata-region=far -msr20 -mc20 -md20
+  LDFLAGS += -mmemory-model=large -mcode-region=far -mdata-region=far -msr20 -mc20 -md20
+ endif
+
+endif # IAR
 
 contiki-$(TARGET).a: ${addprefix $(OBJECTDIR)/,symbols.o}
 #	$(AR) rcf $@ $^
 
+ifndef UPORT
+UPORT=/dev/ttyUSB0
+endif
+
+ifdef WITH_JTAG
+
 %.hex: %.ihex
 	mv $< $@
 
-# %.upload: %.hex
-# 	msp430flasher -n msp430x5437 -e ERASE_MAIN -w $< -v -z [VCC]
-	
-%.upload: %.wismote
-	msp430-objcopy -O ihex $< upload.hex; python -m msp430.bsl5.uart -p /dev/ttyUSB0 --erase=0x8000-0xFFFE upload.hex ; rm upload.hex 	
+%.upload: %.hex
+	msp430flasher -n $(MCU) -e ERASE_MAIN -w $< -v -z [VCC]
 
 %.upload-clean: %.hex
-	msp430flasher -n msp430x5437 -w $< -v -z [VCC]
+	msp430flasher -n $(MCU) -w $< -v -z [VCC]
+
+else # WITH_JTAG
+
+%.titext: %.ihex
+	  python -m msp430.memory.convert -i ihex -f titext $< -o $@
+
+%.upload: %.titext
+	python -m msp430.bsl5.uart -p $(UPORT) --erase=0x8000-0x3FFFF $<
+
+endif # WITH_JTAG
+
+login:
+	$(CONTIKI)/tools/sky/serialdump-linux -b115200 $(UPORT)
