--- a/platform/sky/Makefile.sky
+++ b/platform/sky/Makefile.sky
@@ -10,7 +10,13 @@ endif
 
 include $(CONTIKI)/platform/sky/Makefile.common
 
-MODULES += core/net/ipv6 core/net/ipv4 core/net/rime core/net/mac \
-           core/net core/net/ip core/net/rpl \
-           core/net/mac/contikimac core/net/mac/cxmac \
+# MODULES += core/net/ipv6 core/net/ipv4 core/net/rime core/net/mac \
+#            core/net core/net/ip core/net/rpl \
+#            core/net/mac/contikimac core/net/mac/cxmac \
+#            dev/cc2420 dev/sht11 dev/ds2411
+
+# Zhitao: no IP, thanks.
+MODULES += core/net/rime core/net/mac \
+           core/net \
+           core/net/mac/contikimac \
            dev/cc2420 dev/sht11 dev/ds2411
